clang/test/BSC/Negative/Trait/r3/trait_forward_impl/trait_forward_impl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait T{
    float f(volatile This *this, int a);
    float print(This *this);
};

_Impl _Trait T for float; // expected-error {{function 'f' in '_Trait T' is not implemented for 'float'}}

float float::f(float *this, int a) {
    return *this;
}

float float::print(float *this) {
    return *this;
}

_Impl _Trait T for float; 

volatile _Trait T* get(_Trait T* t){
    float a = 6.0;
    float* x = &a;
    *x = 3.0;
    return x;
};

int main()
{
    float a = 1;
    float b = 2;
    ((_Trait T*)&a)->f(b);
    _Trait T* p = get(&b);
    p->print();
    return 0;
}

